--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.kevin.mapnew.MainActivity"
+    tools:context="com.example.kevin.mapnew.initialMaps"
     tools:showIn="@layout/activity_main">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +15,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.kevin.mapnew.MainActivity">
+        tools:context="com.example.kevin.mapnew.initialMaps">
 
 
     </fragment>
